[project]
name = "trm-integration"
version = "0.1.0"
description = "Integration helpers that connect the Tiny Recursive Model (TRM) to The Beer Game DAG simulator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "MilesAheadToo" }
]
dependencies = [
  "torch",
  "einops",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
